[gd_scene load_steps=13 format=3 uid="uid://cxbkpi5x5q2hq"]

[ext_resource type="Script" path="res://level/Map.gd" id="1_s13dj"]
[ext_resource type="PackedScene" uid="uid://bivgd1yc4y76e" path="res://Player/character.tscn" id="2_mm7jl"]
[ext_resource type="PackedScene" uid="uid://brk81075xsvum" path="res://Rocket/rocket.tscn" id="3_lqw2t"]
[ext_resource type="AudioStream" uid="uid://bk4c01hhknfbm" path="res://sounds/joker-boy-109889.mp3" id="5_glfw5"]
[ext_resource type="PackedScene" uid="uid://dxlg0yy4xyg0d" path="res://level/ground.tscn" id="6_y1n54"]
[ext_resource type="PackedScene" uid="uid://cet2hhtkndsp2" path="res://DayNight/day_night.tscn" id="7_t4a63"]
[ext_resource type="Texture2D" uid="uid://e2x33lu7h1k6" path="res://Art/homeButton.png" id="8_c0viu"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="8_hyuyd"]
[ext_resource type="Script" path="res://level/HomeButton.gd" id="9_yflci"]
[ext_resource type="Script" path="res://level/scoreText.gd" id="9_yhghr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpibt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a3jac"]

[node name="Map" type="Node2D"]
script = ExtResource("1_s13dj")

[node name="DayNight" parent="." instance=ExtResource("7_t4a63")]
position = Vector2(0, 180)
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
editor_draw_drag_margin = true

[node name="Character" parent="." instance=ExtResource("2_mm7jl")]
position = Vector2(0, -225)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Rocket" parent="." instance=ExtResource("3_lqw2t")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_glfw5")
volume_db = -10.0
autoplay = true

[node name="groundFolder" type="Node2D" parent="."]

[node name="ground10" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(288, 148)

[node name="ground9" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(224, 148)

[node name="ground8" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(160, 148)

[node name="ground6" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(32, 148)

[node name="ground5" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-96, 148)

[node name="ground" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-32, 148)

[node name="ground3" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-224, 148)

[node name="ground2" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-288, 148)

[node name="ground4" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-160, 148)

[node name="ground7" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(96, 148)

[node name="ground11" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-352, 148)

[node name="ground12" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(352, 148)

[node name="ground13" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-416, 148)

[node name="ground14" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(416, 148)

[node name="ground15" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(480, 148)

[node name="ground16" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-480, 148)

[node name="ground17" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(544, 148)

[node name="ground18" parent="groundFolder" instance=ExtResource("6_y1n54")]
position = Vector2(-544, 148)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual Joystick" parent="UI" instance=ExtResource("8_hyuyd")]
offset_left = -47.0
offset_top = -163.0
offset_right = 253.0
offset_bottom = 137.0

[node name="JumpScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(300, 31)
scale = Vector2(30, 30)
shape = SubResource("RectangleShape2D_cpibt")
action = "shoot"

[node name="scoreText" type="RichTextLabel" parent="."]
z_index = 3
offset_left = -338.0
offset_top = -172.0
offset_right = -197.0
offset_bottom = -111.0
text = "Score: 
High Score: "
script = ExtResource("9_yhghr")

[node name="HomeButton" type="TouchScreenButton" parent="."]
position = Vector2(-366, -147)
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_a3jac")
script = ExtResource("9_yflci")

[node name="HomeButtonSprite" type="Sprite2D" parent="HomeButton"]
z_index = 3
scale = Vector2(0.32, 0.32)
texture = ExtResource("8_c0viu")
metadata/_edit_lock_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
